fix plugin paging gap position

--- a/grails-app/assets/stylesheets/grails-pagination.less
+++ b/grails-app/assets/stylesheets/grails-pagination.less
@@ -5,10 +5,8 @@
     border-top: 4px solid @grailsGrayWhite;
 
     span.step {
-        display: block;
-        margin: 2px 4px;
+        margin-right: 5px;
         padding: 0 8px;
-        float: left;
         #textshadow > .white(0.8);
     }
 
